syntax = "proto3";

option go_package = "./pb";

message Empty {}

message OperationResponse {
    bool is_affected = 1;
}

message Order {}

message OrderProduct {
    string product_id = 1;
    string name = 2;
    int64 price = 3;
    int64 duration = 4;
}

message OrderResponse {
    string order_id = 1;
    string customer_id = 2;
    OrderProduct product = 3;
    string status = 4;
    int64 created_at = 5;
    int64 updated_at = 6;
}

message OrderCreateRequest {
    string customer_id = 1;
    OrderProduct product = 2;
}

service OrderService {
    rpc Create(OrderCreateRequest) returns (Empty) {}
}